ChangeLog for KNotes
====================

2006/01/16  Michael Brade <brade@kde.org>

    * fixed #119980: the knotes directory wasn't created in Kontact/KNotes

2006/01/06  Michael Brade <brade@kde.org>

    * fixed #115009: since it doesn't seem clearly visible that the "Lock" menu
      item is down after clicking on it a different checked state and display a
      different text ("Unlock") and a different icon.
    * fixed #103780: Separate "Clear" action visually from Cut/Copy/Paste
      since it's not doing anything with the clipboard.
    * fixed #110672: added a "Do not show again" box to the delete note dialog
    * fixed #113223: actually set the "Keep Above/Below" bit when creating a
      note on startup

2006/01/06  Michael Brade <brade@kde.org>

    * fixed enabling/disabling of font and font size combos. Needed especially
      for Kontact where the toolbar is not hidden for non-RichText notes.

2006/01/04  Michael Brade <brade@kde.org>

    * more porting: 
       - KNoteButton almost done (the pixmap isn't shown)
       - drawing ported
       - Fancy style removed, I'm working on the Qt 4 one

2005/12/30  Michael Brade <brade@kde.org>

    * no Q3* in KNotesApp anymore

2005/12/29  Michael Brade <brade@kde.org>

    * use Qt 4's context menu events instead of our own implementation
    * more porting
    * more correct enabling of edit actions when (un)locking a note

2005/12/28  Michael Brade <brade@kde.org>

    * first port to QText* classes and KDE 4.0
    * get rid of client-specific code in KNotes, it has to be added in
      KPilot directly
    * fix default color setting of KConfigXT, it is code
    * new version

2005/09/06  Michael Brade <brade@kde.org>

    * make note colors in Kicker work again for new notes and on start-up.

2005/09/06  Michael Brade <brade@kde.org>

    * fixed #106724: don't overwrite files without asking for confirmation
      first

2005/08/17  Alejandro Exojo <suy@badopi.org>
