@@ -41,6 +41,8 @@
 #include <kglobalaccel.h>
 #include <ksimpleconfig.h>
 #include <kwin.h>
+#include <kbufferedsocket.h>
+#include <kserversocket.h>
 
 #include <libkcal/journal.h>
 #include <libkcal/calendarlocal.h>
@@ -55,6 +57,8 @@
 #include "knotesnetrecv.h"
 
 #include "knotes/resourcemanager.h"
+
+using namespace KNetwork;
 
 
 class KNotesKeyDialog : public KDialogBase
@@ -195,13 +199,10 @@ KNotesApp::KNotesApp()
     m_alarm = new KNotesAlarm( m_manager, this );
 
     // create the socket and possibly start listening for connections
-#warning Port me!
-#if 0
-    m_listener = new KExtendedSocket();
-    m_listener->setSocketFlags( KExtendedSocket::passiveSocket | KExtendedSocket::inetSocket );
+    m_listener = new KServerSocket();
+    m_listener->setResolutionEnabled( true );
     connect( m_listener, SIGNAL(readyAccept()), SLOT(acceptConnection()) );
     updateNetworkListener();
-#endif
 
     if ( m_notes.size() == 0 && !kapp->isSessionRestored() )
         newNote();
@@ -542,15 +543,14 @@ void KNotesApp::killNote( KCal::Journal *journal )
 
 void KNotesApp::acceptConnection()
 {
-#warning Port me!
-#if 0
     // Accept the connection and make KNotesNetworkReceiver do the job
-    KExtendedSocket *s;
-    m_listener->accept( s );
-    KNotesNetworkReceiver *recv = new KNotesNetworkReceiver( s );
-    connect( recv, SIGNAL(sigNoteReceived( const QString &, const QString & )),
-             this, SLOT(newNote( const QString &, const QString & )) );
-#endif
+    KBufferedSocket *s = static_cast<KBufferedSocket *>(m_listener->accept());
+    if ( s )
+    {
+        KNotesNetworkReceiver *recv = new KNotesNetworkReceiver( s );
+        connect( recv, SIGNAL(sigNoteReceived( const QString &, const QString & )),
+                 this, SLOT(newNote( const QString &, const QString & )) );
+    }
 }
 
 void KNotesApp::saveNotes()
@@ -634,16 +634,14 @@ void KNotesApp::updateGlobalAccels()
 
 void KNotesApp::updateNetworkListener()
 {
-#warning Port me!
-#if 0
-    m_listener->reset();
+    m_listener->close();
 
     if ( KNotesGlobalConfig::receiveNotes() )
     {
-        m_listener->setPort( KNotesGlobalConfig::port() );
+        m_listener->setAddress( QString::number( KNotesGlobalConfig::port() ) );
+        m_listener->bind();
         m_listener->listen();
     }
-#endif
 }
 
 void KNotesApp::updateStyle()
