@@ -1,7 +1,7 @@
 /*******************************************************************
  KNotes -- Notes for the KDE project
 
- Copyright (c) 1997-2005, The KNotes Developers
+ Copyright (c) 1997-2006, The KNotes Developers
 
  This program is free software; you can redistribute it and/or
  modify it under the terms of the GNU General Public License
@@ -45,6 +45,10 @@ class KNotesResourceManager;
 
 namespace KCal {
     class Journal;
+}
+
+namespace KNetwork {
+    class KServerSocket;
 }
 
 
@@ -118,7 +122,7 @@ private:
 
     KNotesResourceManager  *m_manager;
     KNotesAlarm            *m_alarm;
-    //KExtendedSocket      *m_listener;
+    KNetwork::KServerSocket   *m_listener;
 
     KFind           *m_find;
     QMap<QString, KNote *>::iterator *m_findPos;
